# mondayHaskellCourse

./: .gitignore  README.md
Setup-hs-main/: .gitignore  LICENSE  README.md  haskell.programming.todo
Setup-hs-main/Lecture2/: HelloWorld.hs  Library.hs
Setup-hs-main/Lecture2/Executable/: HelloWorld.hs
Setup-hs-main/Lecture2/Lib/: MyStrings.hs
Setup-hs-main/Lecture3/project1/: package.yaml  project1.cabal  stack.yaml
Setup-hs-main/Lecture3/project1/app/: Main.hs
Setup-hs-main/Lecture3/project1/src/: Lib.hs
Setup-hs-main/Lecture3/project2/: CHANGELOG.md  project2.cabal
Setup-hs-main/Lecture3/project2/app/: Main.hs
Setup-hs-main/Mail/: CHANGELOG.md  Mail.cabal  stack.yaml
Setup-hs-main/Mail/src/: Mail.hs
Setup-hs-main/Quiz/: CHANGELOG.md  Quiz.cabal
Setup-hs-main/Quiz/app/: RunQuiz.hs
Setup-hs-main/Quiz/benchmark/: FindNumbers.hs
Setup-hs-main/Quiz/src/: Questions.hs  Runner.hs
Setup-hs-main/Quiz/test/: RenderTests.hs
