cabal-version: 1.12

name:           Quiz
version:        0.1.0.0
description:    A simple CLI/text-based quiz game for Haskell
author:         James Bowen
maintainer:     james@mondaymorninghaskell.me
copyright:      2023 Monday Morning Haskell
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
      Runner
  other-modules:
      Paths_Quiz
    , Questions
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wno-missing-export-lists
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable run-quiz
  main-is: RunQuiz.hs
  other-modules:
      Paths_Quiz
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite render-tests
  type: exitcode-stdio-1.0
  main-is: RenderTests.hs
  other-modules:
      Paths_Quiz
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Quiz
    , base >=4.7 && <5
    , tasty
    , tasty-hunit
  default-language: Haskell2010

benchmark find-numbers
  type: exitcode-stdio-1.0
  main-is: FindNumbers.hs
  hs-source-dirs: benchmark
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Quiz
    , base >=4.7 && <5
    , containers
    , criterion
    , random
    , random-shuffle
